Revert "Upgrade Java version to 25 on iteration 2"