@@ -35,7 +35,6 @@ import javax.swing.*;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.InputStream;
-import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -119,12 +118,12 @@ public class Boot
                 {
                     downloading = true;
                     setState("Bytecode Viewer Boot Screen - Downloading " + fileName + "...");
-                    IO.println("Downloading " + fileName);
+                    System.out.println("Downloading " + fileName);
 
                     try (InputStream is = new URL("https://github.com/Konloch/bytecode-viewer/raw/master/libs/" + fileName).openConnection().getInputStream();
                          FileOutputStream fos = new FileOutputStream(file))
                     {
-                        IO.println("Downloading from " + s);
+                        System.out.println("Downloading from " + s);
                         byte[] buffer = new byte[8192];
                         int len;
                         int downloaded = 0;
@@ -138,7 +137,7 @@ public class Boot
                             if (mbs % 5 == 0 && mbs != 0)
                             {
                                 if (!flag)
-                                    IO.println("Downloaded " + mbs + "MBs so far");
+                                    System.out.println("Downloaded " + mbs + "MBs so far");
                                 flag = true;
                             }
                             else
@@ -149,7 +148,7 @@ public class Boot
                     try
                     {
                         setState("Bytecode Viewer Boot Screen - Verifying " + fileName + "...");
-                        IO.println("Verifying " + fileName + "...");
+                        System.out.println("Verifying " + fileName + "...");
 
                         File f = new File(Constants.TEMP_DIRECTORY, "temp");
                         if (!f.exists())
@@ -160,13 +159,13 @@ public class Boot
                         f.delete();
 
                         LIBS_FILE_LIST.add(file.getAbsolutePath());
-                        IO.println("Download finished!");
+                        System.out.println("Download finished!");
                         passed = true;
                     }
                     catch (Exception e)
                     {
                         e.printStackTrace();
-                        IO.println("Jar or Zip" + file.getAbsolutePath() + " is corrupt, redownloading.");
+                        System.out.println("Jar or Zip" + file.getAbsolutePath() + " is corrupt, redownloading.");
                         file.delete();
                     }
                 }
@@ -175,7 +174,7 @@ public class Boot
                     try
                     {
                         setState("Bytecode Viewer Boot Screen - Verifying " + fileName + "...");
-                        IO.println("Verifying " + fileName + "...");
+                        System.out.println("Verifying " + fileName + "...");
 
                         File f = new File(Constants.TEMP_DIRECTORY, "temp");
                         ZipUtils.zipFile(file, f);
@@ -186,7 +185,7 @@ public class Boot
                     catch (Exception e)
                     {
                         e.printStackTrace();
-                        IO.println("Jar or Zip" + file.getAbsolutePath() + " is corrupt, redownloading.");
+                        System.out.println("Jar or Zip" + file.getAbsolutePath() + " is corrupt, redownloading.");
                         LIBS_FILE_LIST.remove(file.getAbsolutePath());
                         file.delete();
                     }
@@ -202,7 +201,7 @@ public class Boot
         }
 
         setState("Bytecode Viewer Boot Screen - Checking & Deleting Foreign/Outdated Libraries...");
-        IO.println("Checking & Deleting foreign/outdated libraries");
+        System.out.println("Checking & Deleting foreign/outdated libraries");
         for (String s : LIBS_FILE_LIST)
         {
             File f = new File(s);
@@ -216,12 +215,12 @@ public class Boot
             if (delete)
             {
                 f.delete();
-                IO.println("Detected & Deleted Foreign/Outdated Jar/File: " + f.getName());
+                System.out.println("Detected & Deleted Foreign/Outdated Jar/File: " + f.getName());
             }
         }
 
         setState("Bytecode Viewer Boot Screen - Loading Libraries...");
-        IO.println("Loading libraries...");
+        System.out.println("Loading libraries...");
 
         for (String s : LIBS_FILE_LIST)
         {
@@ -231,13 +230,13 @@ public class Boot
                 if (f.exists())
                 {
                     setState("Bytecode Viewer Boot Screen - Loading Library " + f.getName());
-                    IO.println("Loading library " + f.getName());
+                    System.out.println("Loading library " + f.getName());
 
                     try
                     {
                         ExternalResource res = new EmptyExternalResource<>(f.toURI().toURL());
                         loader.bind(res);
-                        IO.println("Successfully loaded " + f.getName());
+                        System.out.println("Successfully loaded " + f.getName());
                     }
                     catch (Exception e)
                     {
@@ -296,7 +295,7 @@ public class Boot
 
     public static void populateUrlList() throws Exception
     {
-        HTTPRequest req = new HTTPRequest(URI.create("https://github.com/Konloch/bytecode-viewer/tree/master/libs").toURL());
+        HTTPRequest req = new HTTPRequest(new URL("https://github.com/Konloch/bytecode-viewer/tree/master/libs"));
         for (String s : req.read())
             if (s.contains("href=\"/Konloch/bytecode-viewer/blob/master/libs/"))
             {
@@ -326,7 +325,7 @@ public class Boot
                 temp.delete();
 
             setState("Bytecode Viewer Boot Screen - Extracting Krakatau");
-            IO.println("Extracting Krakatau");
+            System.out.println("Extracting Krakatau");
 
             while (temp.exists())
                 temp.delete();
@@ -343,7 +342,7 @@ public class Boot
 
                 ZipUtils.unzipFilesToPath(temp.getAbsolutePath(), krakatauDirectory.getAbsolutePath());
                 temp.delete();
-                IO.println("Successfully extracted Krakatau");
+                System.out.println("Successfully extracted Krakatau");
             }
             catch (Exception e)
             {
@@ -364,7 +363,7 @@ public class Boot
                 temp.delete();
 
             setState("Bytecode Viewer Boot Screen - Extracting Enjarify");
-            IO.println("Extracting Enjarify");
+            System.out.println("Extracting Enjarify");
 
             while (temp.exists())
                 temp.delete();
@@ -381,7 +380,7 @@ public class Boot
 
                 ZipUtils.unzipFilesToPath(temp.getAbsolutePath(), enjarifyDirectory.getAbsolutePath());
                 temp.delete();
-                IO.println("Successfully extracted Enjarify");
+                System.out.println("Successfully extracted Enjarify");
             }
             catch (Exception e)
             {
@@ -405,12 +404,12 @@ public class Boot
                 {
                     downloading = true;
                     setState("Bytecode Viewer Boot Screen - Downloading " + fileName + "...");
-                    IO.println("Downloading " + fileName);
+                    System.out.println("Downloading " + fileName);
 
                     try (InputStream is = new URL("https://github.com/Konloch/bytecode-viewer/raw/master/libs/" + fileName).openConnection().getInputStream();
                          FileOutputStream fos = new FileOutputStream(file))
                     {
-                        IO.println("Downloading from " + s);
+                        System.out.println("Downloading from " + s);
                         byte[] buffer = new byte[8192];
                         int len;
                         int downloaded = 0;
@@ -424,7 +423,7 @@ public class Boot
                             if (mbs % 5 == 0 && mbs != 0)
                             {
                                 if (!flag)
-                                    IO.println("Downloaded " + mbs + "MBs so far");
+                                    System.out.println("Downloaded " + mbs + "MBs so far");
                                 flag = true;
                             }
                             else
@@ -439,20 +438,20 @@ public class Boot
                     try
                     {
                         setState("Bytecode Viewer Boot Screen - Verifying " + fileName + "...");
-                        IO.println("Verifying " + fileName + "...");
+                        System.out.println("Verifying " + fileName + "...");
 
                         File f = new File(Constants.TEMP_DIRECTORY, "temp");
                         ZipUtils.zipFile(file, f);
                         f.delete();
 
                         LIBS_FILE_LIST.add(file.getAbsolutePath());
-                        IO.println("Download finished!");
+                        System.out.println("Download finished!");
                         passed = true;
                     }
                     catch (Exception e)
                     {
                         e.printStackTrace();
-                        IO.println("Jar or Zip" + file.getAbsolutePath() + " is corrupt, redownloading.");
+                        System.out.println("Jar or Zip" + file.getAbsolutePath() + " is corrupt, redownloading.");
                         file.delete();
                     }
                 }
@@ -465,7 +464,7 @@ public class Boot
     public static void checkEnjarify()
     {
         setState("Bytecode Viewer Boot Screen - Checking Enjarify...");
-        IO.println("Checking enjarify");
+        System.out.println("Checking enjarify");
         File enjarifyZip = null;
         for (File f : MiscUtils.listFiles(new File(Constants.LIBS_DIRECTORY)))
         {
@@ -481,7 +480,7 @@ public class Boot
             if (f.getName().toLowerCase().startsWith("enjarify_") && !f.getName().split("_")[1].split("\\.")[0].equals(Constants.enjarifyVersion))
             {
                 setState("Bytecode Viewer Boot Screen - Removing Outdated " + f.getName() + "...");
-                IO.println("Removing oudated " + f.getName());
+                System.out.println("Removing oudated " + f.getName());
                 try
                 {
                     FileUtils.deleteDirectory(f);
@@ -501,7 +500,7 @@ public class Boot
             {
                 setState("Bytecode Viewer Boot Screen - Updating to " + enjarifyDirectory.getName() + "...");
                 ZipUtils.unzipFilesToPath(Objects.requireNonNull(enjarifyZip).getAbsolutePath(), enjarifyDirectory.getAbsolutePath());
-                IO.println("Updated to enjarify v" + Constants.enjarifyVersion);
+                System.out.println("Updated to enjarify v" + Constants.enjarifyVersion);
             }
             catch (Exception e)
             {
@@ -517,7 +516,7 @@ public class Boot
     public static void checkKrakatau()
     {
         setState("Bytecode Viewer Boot Screen - Checking Krakatau...");
-        IO.println("Checking krakatau");
+        System.out.println("Checking krakatau");
 
         File krakatauZip = null;
         for (File f : MiscUtils.listFiles(new File(Constants.LIBS_DIRECTORY)))
@@ -535,7 +534,7 @@ public class Boot
             if (f.getName().toLowerCase().startsWith("krakatau_") && !f.getName().split("_")[1].split("\\.")[0].equals(Constants.krakatauVersion))
             {
                 setState("Bytecode Viewer Boot Screen - Removing Outdated " + f.getName() + "...");
-                IO.println("Removing oudated " + f.getName());
+                System.out.println("Removing oudated " + f.getName());
                 try
                 {
                     FileUtils.deleteDirectory(f);
@@ -556,7 +555,7 @@ public class Boot
             {
                 setState("Bytecode Viewer Boot Screen - Updating to " + krakatauDirectory.getName() + "...");
                 ZipUtils.unzipFilesToPath(Objects.requireNonNull(krakatauZip).getAbsolutePath(), krakatauDirectory.getAbsolutePath());
-                IO.println("Updated to krakatau v" + Constants.krakatauVersion);
+                System.out.println("Updated to krakatau v" + Constants.krakatauVersion);
             }
             catch (Exception e)
             {
